Fixed spacing on hours and menu tabs

--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -28,3 +28,7 @@
 	border: none;
 	background: none;
 }
+
+.display-4 {
+	font-size: 2.5rem;
+}
